--- a/Tsltn/TsltnControl.xaml
+++ b/Tsltn/TsltnControl.xaml
@@ -16,7 +16,7 @@
              FontSize="16"
              TextOptions.TextFormattingMode="Ideal"
              Loaded="TsltnControl_Loaded" 
-             Unloaded="TsltnControl_Unloaded">
+             Unloaded="TsltnControl_Unloaded" FocusManager.IsFocusScope="True">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -53,11 +53,12 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <UserControl.CommandBindings>
-        <CommandBinding Command="PreviousPage" CanExecute="PreviousPage_CanExecute" Executed="PreviousPage_Executed"/>
-        <CommandBinding Command="NextPage" CanExecute="NextPage_CanExecute" Executed="NextPage_Executed"/>
+        <CommandBinding Command="BrowseBack" CanExecute="PreviousPage_CanExecute" Executed="PreviousPage_Executed"/>
+        <CommandBinding Command="BrowseForward" CanExecute="NextPage_CanExecute" Executed="NextPage_Executed"/>
         <CommandBinding Command="{x:Static cmd:TsltnControlCommand.CopyXml}" Executed="CopyXml_Executed"/>
         <CommandBinding Command="{x:Static cmd:TsltnControlCommand.CopyText}" Executed="CopyText_Executed"/>
         <CommandBinding Command="{x:Static cmd:TsltnControlCommand.BrowseAll}" Executed="BrowseAll_Executed"/>
+        <CommandBinding Command="{x:Static cmd:TsltnControlCommand.NextToTranslate}" CanExecute="NextToTranslate_CanExecute" Executed="NextToTranslate_Executed"/>
     </UserControl.CommandBindings>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -66,9 +67,7 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="3*" MinHeight="170"/>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="5"/>
             <RowDefinition Height="1*" MinHeight="50"/>
         </Grid.RowDefinitions>
@@ -125,74 +124,104 @@
             </Grid>
         </DockPanel>
 
-        <Border Style="{StaticResource headerBorder}" Grid.Row="1">
-        <TextBlock  Style="{StaticResource HeaderTextBlock}" Text="{x:Static r:Res.Original}" VerticalAlignment="Center"/>
-        </Border>
-        <Border Grid.Row="1" Grid.Column="1">
-            <Border.Style>
-                <Style TargetType="Border" BasedOn="{StaticResource headerBorder}">
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding HasTranslation, Mode=OneWay}" Value="False">
-                            <DataTrigger.Setters>
-                                <Setter Property="Background" Value="Gray"/>
-                            </DataTrigger.Setters>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </Border.Style>
-            
-        <TextBlock  Text="{x:Static r:Res.Translation}" VerticalAlignment="Center">
-            <TextBlock.Style>
-                <Style TargetType="TextBlock" BasedOn="{StaticResource HeaderTextBlock}">
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding HasTranslation, Mode=OneWay}" Value="False">
-                                <DataTrigger.Setters>
-                                    <Setter Property="Foreground" Value="Black"/>
-                            </DataTrigger.Setters>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </TextBlock.Style>
-        </TextBlock>
-        </Border>
-        <Button Name="_btnReset" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right"
-                Content="{x:Static r:Res.Reset}" Click="_btnReset_Click" IsEnabled="{Binding HasTranslation}"/>
+        
 
-        <!--
-        <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" CanContentScroll="True">
-            <TextBlock Text="{Binding CurrentNode.InnerXml}" TextWrapping="WrapWithOverflow" Padding="10" FontSize="22"/>
-        </ScrollViewer>
-        -->
 
-        <TextBox Grid.Row="2" IsReadOnly="True" Text="{Binding CurrentNode.InnerXml, Mode=OneWay}"
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Border Style="{StaticResource headerBorder}">
+                <TextBlock  Style="{StaticResource HeaderTextBlock}" Text="{x:Static r:Res.Original}" VerticalAlignment="Center"/>
+            </Border>
+
+            <Button Name="_btnNextToTranslate" Command="{x:Static cmd:TsltnControlCommand.NextToTranslate}" Height="{Binding ElementName=_btnReset, Path=ActualHeight}"
+                    HorizontalAlignment="Right" Content="{x:Static r:Res.NextToTranslate}" FontSize="12">
+            </Button>
+
+            <TextBox Grid.Row="1" DockPanel.Dock="Top" IsReadOnly="True" Text="{Binding CurrentNode.InnerXml, Mode=OneWay}"
                  ScrollViewer.VerticalScrollBarVisibility="Visible"
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                  ScrollViewer.CanContentScroll="True"
                  TextWrapping="WrapWithOverflow" Padding="10" FontSize="22" Background="WhiteSmoke" UndoLimit="0" IsEnabled="False"/>
 
-        <TextBox Name="_tbTranslation" Grid.Row="2" Grid.Column="1" Text="{Binding Translation, UpdateSourceTrigger=PropertyChanged}"
+            <Grid Grid.Row="2">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Button Command="{x:Static cmd:TsltnControlCommand.CopyText}" Content="{x:Static r:Res.CopyText}"/>
+                    <Button Command="{x:Static cmd:TsltnControlCommand.CopyXml}" Content="{x:Static r:Res.CopyXml}"/>
+                </StackPanel>
+                <Button Name="_btnPrevious" Command="BrowseBack" Content="{x:Static r:Res.Previous}" HorizontalAlignment="Left"></Button>
+                <Button Name="_btnNext" Command="BrowseForward" HorizontalAlignment="Right" Content="{x:Static r:Res.Next}"/>
+            </Grid>
+        </Grid>
+
+        <Grid Grid.Row="1" Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <Border>
+                <Border.Style>
+                    <Style TargetType="Border" BasedOn="{StaticResource headerBorder}">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding HasTranslation, Mode=OneWay}" Value="False">
+                                <DataTrigger.Setters>
+                                    <Setter Property="Background" Value="Gray"/>
+                                </DataTrigger.Setters>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Border.Style>
+
+                <TextBlock  Text="{x:Static r:Res.Translation}" VerticalAlignment="Center">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock" BasedOn="{StaticResource HeaderTextBlock}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding HasTranslation, Mode=OneWay}" Value="False">
+                                    <DataTrigger.Setters>
+                                        <Setter Property="Foreground" Value="Black"/>
+                                    </DataTrigger.Setters>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+            </Border>
+            <Button Name="_btnReset" HorizontalAlignment="Right"
+                Content="{x:Static r:Res.Reset}" Click="_btnReset_Click" IsEnabled="{Binding HasTranslation}" />
+
+            <TextBox Name="_tbTranslation" Grid.Row="1" Text="{Binding Translation, UpdateSourceTrigger=PropertyChanged}"
                  GotKeyboardFocus="_tbTranslation_GotKeyboardFocus"
                  ScrollViewer.VerticalScrollBarVisibility="Visible"
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                  ScrollViewer.CanContentScroll="True"
                  Padding="10" FontSize="22" Background="WhiteSmoke" TextWrapping="WrapWithOverflow" AcceptsReturn="True" />
 
-        <Grid Grid.Row="3">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Command="{x:Static cmd:TsltnControlCommand.CopyText}" Content="{x:Static r:Res.CopyText}"/>
-                <Button Command="{x:Static cmd:TsltnControlCommand.CopyXml}" Content="{x:Static r:Res.CopyXml}"/>
-            </StackPanel>
-            <Button Command="PreviousPage" Content="{x:Static r:Res.Previous}" HorizontalAlignment="Left"></Button>
-            <Button Command="NextPage" HorizontalAlignment="Right" Content="{x:Static r:Res.Next}"/>
-        </Grid>
 
-        <Button Grid.Column="1" Grid.Row="3" HorizontalAlignment="Center" Command="{x:Static cmd:TsltnControlCommand.BrowseAll}"
+
+            <Button Grid.Row="2" HorizontalAlignment="Center" Command="{x:Static cmd:TsltnControlCommand.BrowseAll}"
                 Content="{x:Static r:Res.BrowseAll}"></Button>
+        </Grid>
+        
 
+        
+        <!--
+        <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" CanContentScroll="True">
+            <TextBlock Text="{Binding CurrentNode.InnerXml}" TextWrapping="WrapWithOverflow" Padding="10" FontSize="22"/>
+        </ScrollViewer>
+        -->
 
-        <GridSplitter Grid.Row="4" Grid.ColumnSpan="2" Height="5" HorizontalAlignment="Stretch" ResizeDirection="Rows" ResizeBehavior="PreviousAndNext"/>
+        
 
-        <ListBox Grid.Row="5" Grid.ColumnSpan="2" ItemsSource="{Binding Errors}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Focusable="False">
+        
+
+        <GridSplitter Grid.Row="2" Grid.ColumnSpan="2" Height="5" HorizontalAlignment="Stretch" ResizeDirection="Rows" ResizeBehavior="PreviousAndNext"/>
+
+        <ListBox Grid.Row="3" Grid.ColumnSpan="2" ItemsSource="{Binding Errors}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Focusable="False">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem" BasedOn="{StaticResource {x:Type ListBoxItem}}">
                     <Setter Property="Focusable" Value="False"/>
