--- a/Tsltn/NavigationUserControl.xaml
+++ b/Tsltn/NavigationUserControl.xaml
@@ -5,13 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Tsltn"
              xmlns:r ="clr-namespace:Tsltn.Resources"
+             xmlns:cmd ="clr-namespace:Tsltn.Commands"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
+             d:DesignHeight="100" d:DesignWidth="200"
              DataContext="{Binding RelativeSource={RelativeSource Self}}"
              MinWidth="220"
             TextOptions.TextFormattingMode="Ideal">
     <UserControl.CommandBindings>
-        <CommandBinding Command="BrowseForward" CanExecute="BrowseForward_CanExecute" Executed="BrowseForward_Executed"/>
+        <CommandBinding Command="{x:Static cmd:NavigationUserControlCommand.Search}" CanExecute="BrowseForward_CanExecute" Executed="BrowseForward_Executed"/>
     </UserControl.CommandBindings>
     <UserControl.Resources>
         <Style TargetType="ToggleButton" BasedOn="{StaticResource {x:Type ToggleButton}}">
@@ -26,13 +27,16 @@
     <StackPanel>
         <Label Content="{x:Static r:Res.GoTo}" Padding="0"></Label>
         <DockPanel>
-            <Button DockPanel.Dock="Right" Command="BrowseForward" MinWidth="25" MinHeight="25" TabIndex="4">&#x2192;</Button>
-            <TextBox AcceptsReturn="False" AcceptsTab="False"
-                     Text="{Binding PathFragment, UpdateSourceTrigger=PropertyChanged}" UndoLimit="10" TabIndex="1"/>
+            <Button DockPanel.Dock="Right" Command="{x:Static cmd:NavigationUserControlCommand.Search}" MinWidth="25" MinHeight="25" TabIndex="4" ToolTip="{x:Static r:Res.Search}">&#x2192;</Button>
+            <Button Name="_btnClear" DockPanel.Dock="Right" MinWidth="25" MinHeight="25" TabIndex="5" ToolTip="{x:Static r:Res.Clear}" FontSize="16" VerticalContentAlignment="Center"
+                    Background="{Binding ElementName=_tbQuery, Path=Background}" BorderBrush="{Binding ElementName=_tbQuery, Path=BorderBrush}" 
+                    BorderThickness="0,1,0,1" Foreground="Gray" Padding="0,0,0,5" Click="_btnClear_Click">x</Button>
+            <TextBox Name="_tbQuery" AcceptsReturn="False" AcceptsTab="False"
+                     Text="{Binding PathFragment, UpdateSourceTrigger=PropertyChanged}" UndoLimit="10" TabIndex="1" PreviewKeyDown="TextBox_PreviewKeyDown" BorderThickness="1,1,0,1"/>
         </DockPanel>
         <StackPanel Orientation="Horizontal">
-            <ToggleButton IsChecked="{Binding CaseSensitive}" FontSize="16" TabIndex="2">Aa</ToggleButton>
-            <ToggleButton IsChecked="{Binding WholeWord}" TabIndex="3">
+            <ToggleButton IsChecked="{Binding CaseSensitive}" FontSize="16" TabIndex="2" Content="Aa" ToolTip="{x:Static r:Res.CaseSensitiveSearch}"></ToggleButton>
+            <ToggleButton IsChecked="{Binding WholeWord}" TabIndex="3" ToolTip="{x:Static r:Res.WholeWordOnly}">
                 <Border Margin="1" BorderBrush="Black" BorderThickness="0,1,1,1">
                 <TextBlock Margin="1" FontSize="10">Ab</TextBlock>
                 </Border>
